// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should compose with styles overrides 1`] = `
Object {
  "component": <table
    className="1gskw3r"
>
    Table
</table>,
  "styles": ".1gskw3r {
  background: #fff;
  border-collapse: collapse;
  border-spacing: 0px;
  max-width: 100%;
  width: 100%;
  vertical-align: right
}
@media (max-width: 47.2em) {
  .1gskw3r {
    display: block;
    width: 100%;
    box-sizing: border-box
  }
}
@media screen and (max-width: 47.2em) {
  .1gskw3r {
    display: block
  }
}
@media (min-width: 97.6em) {
  .1gskw3r {
    width: 1000px
  }
}",
}
`;

exports[`Table should render 1`] = `
Object {
  "component": <table
    className="46sr0r"
>
    Table
</table>,
  "styles": ".46sr0r {
  background: #fff;
  border-collapse: collapse;
  border-spacing: 0px;
  max-width: 100%;
  width: 100%
}
@media (max-width: 47.2em) {
  .46sr0r {
    display: block;
    width: 100%;
    box-sizing: border-box
  }
}
@media screen and (max-width: 47.2em) {
  .46sr0r {
    display: block
  }
}",
}
`;

exports[`Table should render condensed 1`] = `
Object {
  "component": <table
    className="46sr0r"
>
    Table
</table>,
  "styles": ".46sr0r {
  background: #fff;
  border-collapse: collapse;
  border-spacing: 0px;
  max-width: 100%;
  width: 100%
}
@media (max-width: 47.2em) {
  .46sr0r {
    display: block;
    width: 100%;
    box-sizing: border-box
  }
}
@media screen and (max-width: 47.2em) {
  .46sr0r {
    display: block
  }
}",
}
`;

exports[`Table should render hover 1`] = `
Object {
  "component": <table
    className="46sr0r"
>
    Table
</table>,
  "styles": ".46sr0r {
  background: #fff;
  border-collapse: collapse;
  border-spacing: 0px;
  max-width: 100%;
  width: 100%
}
@media (max-width: 47.2em) {
  .46sr0r {
    display: block;
    width: 100%;
    box-sizing: border-box
  }
}
@media screen and (max-width: 47.2em) {
  .46sr0r {
    display: block
  }
}",
}
`;

exports[`Table should render not bordered 1`] = `
Object {
  "component": <table
    className="46sr0r"
>
    Table
</table>,
  "styles": ".46sr0r {
  background: #fff;
  border-collapse: collapse;
  border-spacing: 0px;
  max-width: 100%;
  width: 100%
}
@media (max-width: 47.2em) {
  .46sr0r {
    display: block;
    width: 100%;
    box-sizing: border-box
  }
}
@media screen and (max-width: 47.2em) {
  .46sr0r {
    display: block
  }
}",
}
`;

exports[`Table should render striped 1`] = `
Object {
  "component": <table
    className="46sr0r"
>
    Table
</table>,
  "styles": ".46sr0r {
  background: #fff;
  border-collapse: collapse;
  border-spacing: 0px;
  max-width: 100%;
  width: 100%
}
@media (max-width: 47.2em) {
  .46sr0r {
    display: block;
    width: 100%;
    box-sizing: border-box
  }
}
@media screen and (max-width: 47.2em) {
  .46sr0r {
    display: block
  }
}",
}
`;

exports[`createTable should be able to render a div 1`] = `
<StyleProvider
  dev={true}
>
  <Provider
    renderer={
      Object {
        "_emitChange": [Function],
        "_renderStyleToCache": [Function],
        "_renderStyleToClassNames": [Function],
        "cache": Object {
          "1c43i05": true,
          "1gskw3r": true,
          "d1fi02": true,
          "dotb8y": true,
          "kk9pov": true,
          "zos2pn": true,
        },
        "clear": [Function],
        "fontFaces": "",
        "keyframePrefixes": Array [
          "-webkit-",
          "-moz-",
          "",
        ],
        "keyframes": "",
        "listeners": Array [
          [Function],
          [Function],
        ],
        "mediaQueryOrder": Array [],
        "mediaRules": Object {
          "(max-width: 47.2em)": ".1gskw3r {
        display: block;
        width: 100%;
        box-sizing: border-box
      }
      
      .d1fi02 {
        display: block;
        width: 100%;
        box-sizing: border-box
      }
      
      .1c43i05 {
        display: block;
        width: 100%;
        box-sizing: border-box
      }
      
      .kk9pov {
        display: block;
        width: 100%;
        box-sizing: border-box;
        border-top-width: 0px
      }
      
      .zos2pn {
        display: block;
        width: 100%;
        box-sizing: border-box
      }
      
      .dotb8y {
        display: block;
        width: 100%;
        box-sizing: border-box
      }",
          "(min-width: 97.6em)": ".1gskw3r {
        width: 1000px
      }",
          "screen and (max-width: 47.2em)": ".1gskw3r {
        display: block
      }
      
      .d1fi02 {
        display: none
      }
      
      .1c43i05:after {
        content: \\"\\";
        display: table;
        clear: both
      }
      
      .1c43i05 {
        display: block;
        padding: 0.73333333333rem;
        border-top: 1px solid #dedede;
        background-color: #ccc
      }
      
      .kk9pov {
        display: block;
        border: none;
        float: left;
        clear: left;
        padding: 0px
      }
      
      .zos2pn {
        display: block
      }",
        },
        "plugins": Array [
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "prettySelectors": false,
        "renderFont": [Function],
        "renderKeyframe": [Function],
        "renderRule": [Function],
        "renderStatic": [Function],
        "renderToString": [Function],
        "rules": ".1gskw3r {
        background: #fff;
        border-collapse: collapse;
        border-spacing: 0px;
        max-width: 100%;
        width: 100%;
        vertical-align: right
      }
      
      .d1fi02 {
        background: #dedede
      }
      
      .1c43i05 {
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        flex-wrap: nowrap;
        -webkit-box-lines: nowrap;
        -webkit-flex-wrap: nowrap;
        justify-content: space-around;
        -webkit-box-pack: justify;
        -webkit-justify-content: space-around;
        align-items: center;
        -webkit-box-align: center;
        -webkit-align-items: center;
        border-color: #dedede
      }
      
      .kk9pov {
        display: inline-block;
        flex: auto;
        -webkit-flex: auto;
        border-top: 1px solid #dedede;
        line-height: 1.5;
        padding: 0.73333333333rem;
        vertical-align: middle;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        border-color: #dedede
      }",
        "selectorPrefix": "",
        "statics": "",
        "styleNodes": Object {
          "RULE": <style
            data-fela-type="RULE"
            type="text/css"
      >
            .1gskw3r { background: #fff; border-collapse: collapse; border-spacing: 0px; max-width: 100%; width: 100%; vertical-align: right } .d1fi02 { background: #dedede } .1c43i05 { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; flex-wrap: nowrap; -webkit-box-lines: nowrap; -webkit-flex-wrap: nowrap; justify-content: space-around; -webkit-box-pack: justify; -webkit-justify-content: space-around; align-items: center; -webkit-box-align: center; -webkit-align-items: center; border-color: #dedede } .kk9pov { display: inline-block; flex: auto; -webkit-flex: auto; border-top: 1px solid #dedede; line-height: 1.5; padding: 0.73333333333rem; vertical-align: middle; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; border-color: #dedede }
      </style>,
          "RULE(max-width: 47.2em)": <style
            data-fela-type="RULE"
            type="text/css"
            media="(max-width: 47.2em)"
      >
            .1gskw3r { display: block; width: 100%; box-sizing: border-box } .d1fi02 { display: block; width: 100%; box-sizing: border-box } .1c43i05 { display: block; width: 100%; box-sizing: border-box } .kk9pov { display: block; width: 100%; box-sizing: border-box; border-top-width: 0px } .zos2pn { display: block; width: 100%; box-sizing: border-box } .dotb8y { display: block; width: 100%; box-sizing: border-box }
      </style>,
          "RULE(min-width: 97.6em)": <style
            data-fela-type="RULE"
            type="text/css"
            media="(min-width: 97.6em)"
      >
            .1gskw3r { width: 1000px }
      </style>,
          "RULEscreen and (max-width: 47.2em)": <style
            data-fela-type="RULE"
            type="text/css"
            media="screen and (max-width: 47.2em)"
      >
            .1gskw3r { display: block } .d1fi02 { display: none } .1c43i05:after { content: ""; display: table; clear: both } .1c43i05 { display: block; padding: 0.73333333333rem; border-top: 1px solid #dedede; background-color: #ccc } .kk9pov { display: block; border: none; float: left; clear: left; padding: 0px } .zos2pn { display: block }
      </style>,
        },
        "subscribe": [Function],
        "uniqueKeyframeIdentifier": 0,
        "uniqueRuleIdentifier": 0,
      }
    }
  >
    <ThemeProvider
      overwrite={false}
      theme={
        Object {
          "arrowSize": "5px",
          "bodyAccentColor": "#333",
          "bodyBackground": "#ebebeb",
          "bodyOffsetColor": "#787878",
          "borderRadius": "2px",
          "boxShadow": "0 0 20px 0 rgba(136,136,136,0.50)",
          "breakpoints": Object {
            "desktop": "64em",
            "desktopLarge": "97.6em",
            "mobile": "13.6em",
            "mobileWide": "30.4em",
            "tablet": "47.2em",
          },
          "color": Object {
            "apple": "#BD2527",
            "carrot": "#f56500",
            "cement": "#7D7D7D",
            "charcoal": "#333333",
            "dawn": "#F16975",
            "dew": "#85CBA8",
            "dusk": "#4D4D4F",
            "grass": "#9BCA3E",
            "hail": "#BCBEC0",
            "lightning": "#FFDB6F",
            "marine": "#2F7BBF",
            "moonshine": "#F7F7F7",
            "night": "#404041",
            "rain": "#408BC9",
            "sky": "#76C4E2",
            "smoke": "#e0e0e0",
            "storm": "#808285",
            "sunrise": "#F69259",
            "sunset": "#BA77B1",
            "tangerine": "#FF7900",
            "twilight": "#8176B5",
          },
          "colorBlack": "#000",
          "colorBlue": "#2f7bbf",
          "colorBlueDark": "#2869a2",
          "colorBlueLight": "#62a1d8",
          "colorError": "#ff3100",
          "colorFacebookBlue": "#3b5998",
          "colorGray": "#7c7c7c",
          "colorGrayBorder": "#666",
          "colorGrayDark": "#333",
          "colorGrayLight": "#dedede",
          "colorGrayLightOnboarding": "#F7F7F7",
          "colorGreen": "#9bca3e",
          "colorGreenDark": "#87b331",
          "colorGreenLight": "#bada7a",
          "colorImportantInformation": "rgba(64,139,201,0.2)",
          "colorInfo": "#00a9eb",
          "colorMainBackground": "#e6e6e6",
          "colorMuted": "#7c7c7c",
          "colorOffsetDark": 0.07,
          "colorOffsetLight": 0.15,
          "colorOrange": "#ff7900",
          "colorOrangeDark": "#db6800",
          "colorOrangeLight": "#ffa14d",
          "colorOverlay": "rgba(0, 0, 0, .7)",
          "colorPink": "#d91698",
          "colorPinkDark": "#b91381",
          "colorPinkLight": "#ed4eb8",
          "colorPurple": "#9545e5",
          "colorPurpleDark": "#b91381",
          "colorPurpleLight": "#ed4eb8",
          "colorRed": "#bd2527",
          "colorRedDark": "#9f1f21",
          "colorRedLight": "#dd5153",
          "colorSmoke": "#f2f2f2",
          "colorSuccess": "#68970f",
          "colorTwitterBlue": "#00aced",
          "colorWarning": "#fca520",
          "colorWhite": "#fff",
          "colorYellow": "#ffd24d",
          "colorYellowDark": "#ffc929",
          "colorYellowLight": "#ffe59a",
          "disabledBackground": "#ededed",
          "em": "1em",
          "fontColor": "#333",
          "fontColorHeadingCaption": "#888",
          "fontFamily": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "fontSize": "15px",
          "fontWeight": 400,
          "fontWeightLight": 300,
          "gradient": Object {
            "eight": "linear-gradient(left, #85CBA8, #FFDB6F)",
            "five": "linear-gradient(left, #8176B5, #F16975)",
            "four": "linear-gradient(left, #8176B5, #BA77B1)",
            "primary": "linear-gradient(left, #76C4E2, #85CBA8)",
            "seven": "linear-gradient(left, #F69259, #FFDB6F)",
            "six": "linear-gradient(left, #F16975, #F69259)",
            "three": "linear-gradient(left, #8176B5, #76C4E2)",
            "two": "linear-gradient(left, #8176B5, #85CBA8)",
          },
          "inputFontSize": "13px",
          "inputLineHeight": 1.4,
          "lineHeight": 1.5,
          "rem": "1rem",
          "weightBold": 700,
          "weightLight": 300,
          "weightNormal": 400,
          "weightSemiBold": 600,
          "zIndexMax": 1000,
        }
      }
    >
      <ThemedComponent
        is="div"
      >
        <FelaComponent
          is="div"
        >
          <div
            className="1gskw3r"
            is="div"
          >
            <ThemedComponent
              is="div"
            >
              <FelaComponent
                is="div"
              >
                <div
                  className="d1fi02"
                  is="div"
                >
                  <ThemedComponent
                    is="div"
                  >
                    <FelaComponent
                      is="div"
                    >
                      <div
                        className="1c43i05"
                        is="div"
                      >
                        <ThemedComponent
                          is="div"
                        >
                          <FelaComponent
                            is="div"
                          >
                            <div
                              className="kk9pov"
                              is="div"
                            />
                          </FelaComponent>
                        </ThemedComponent>
                      </div>
                    </FelaComponent>
                  </ThemedComponent>
                </div>
              </FelaComponent>
            </ThemedComponent>
            <ThemedComponent
              is="div"
            >
              <FelaComponent
                is="div"
              >
                <div
                  className="zos2pn"
                  is="div"
                >
                  <ThemedComponent
                    is="div"
                  >
                    <FelaComponent
                      is="div"
                    >
                      <div
                        className="1c43i05"
                        is="div"
                      >
                        <ThemedComponent
                          is="div"
                        >
                          <FelaComponent
                            is="div"
                          >
                            <div
                              className="kk9pov"
                              is="div"
                            />
                          </FelaComponent>
                        </ThemedComponent>
                      </div>
                    </FelaComponent>
                  </ThemedComponent>
                </div>
              </FelaComponent>
            </ThemedComponent>
            <ThemedComponent
              is="div"
            >
              <FelaComponent
                is="div"
              >
                <div
                  className="dotb8y"
                  is="div"
                >
                  <ThemedComponent
                    is="div"
                  >
                    <FelaComponent
                      is="div"
                    >
                      <div
                        className="1c43i05"
                        is="div"
                      >
                        <ThemedComponent
                          is="div"
                        >
                          <FelaComponent
                            is="div"
                          >
                            <div
                              className="kk9pov"
                              is="div"
                            />
                          </FelaComponent>
                        </ThemedComponent>
                      </div>
                    </FelaComponent>
                  </ThemedComponent>
                </div>
              </FelaComponent>
            </ThemedComponent>
          </div>
        </FelaComponent>
      </ThemedComponent>
    </ThemeProvider>
  </Provider>
</StyleProvider>
`;

exports[`createTable should compose with styles overrides 1`] = `
<StyleProvider
  dev={true}
>
  <Provider
    renderer={
      Object {
        "_emitChange": [Function],
        "_renderStyleToCache": [Function],
        "_renderStyleToClassNames": [Function],
        "cache": Object {
          "d1fi02": true,
          "dotb8y": true,
          "zos2pn": true,
        },
        "clear": [Function],
        "fontFaces": "",
        "keyframePrefixes": Array [
          "-webkit-",
          "-moz-",
          "",
        ],
        "keyframes": "",
        "listeners": Array [
          [Function],
          [Function],
        ],
        "mediaQueryOrder": Array [],
        "mediaRules": Object {
          "(max-width: 47.2em)": ".d1fi02 {
        display: block;
        width: 100%;
        box-sizing: border-box
      }
      
      .zos2pn {
        display: block;
        width: 100%;
        box-sizing: border-box
      }
      
      .dotb8y {
        display: block;
        width: 100%;
        box-sizing: border-box
      }",
          "screen and (max-width: 47.2em)": ".d1fi02 {
        display: none
      }
      
      .zos2pn {
        display: block
      }",
        },
        "plugins": Array [
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
        ],
        "prettySelectors": false,
        "renderFont": [Function],
        "renderKeyframe": [Function],
        "renderRule": [Function],
        "renderStatic": [Function],
        "renderToString": [Function],
        "rules": ".d1fi02 {
        background: #dedede
      }",
        "selectorPrefix": "",
        "statics": "",
        "styleNodes": Object {
          "RULE": <style
            data-fela-type="RULE"
            type="text/css"
      >
            .d1fi02 { background: #dedede }
      </style>,
          "RULE(max-width: 47.2em)": <style
            data-fela-type="RULE"
            type="text/css"
            media="(max-width: 47.2em)"
      >
            .d1fi02 { display: block; width: 100%; box-sizing: border-box } .zos2pn { display: block; width: 100%; box-sizing: border-box } .dotb8y { display: block; width: 100%; box-sizing: border-box }
      </style>,
          "RULE(min-width: 97.6em)": <style
            data-fela-type="RULE"
            type="text/css"
            media="(min-width: 97.6em)"
      >
            .1gskw3r { width: 1000px }
      </style>,
          "RULEscreen and (max-width: 47.2em)": <style
            data-fela-type="RULE"
            type="text/css"
            media="screen and (max-width: 47.2em)"
      >
            .d1fi02 { display: none } .zos2pn { display: block }
      </style>,
        },
        "subscribe": [Function],
        "uniqueKeyframeIdentifier": 0,
        "uniqueRuleIdentifier": 0,
      }
    }
  >
    <ThemeProvider
      overwrite={false}
      theme={
        Object {
          "arrowSize": "5px",
          "bodyAccentColor": "#333",
          "bodyBackground": "#ebebeb",
          "bodyOffsetColor": "#787878",
          "borderRadius": "2px",
          "boxShadow": "0 0 20px 0 rgba(136,136,136,0.50)",
          "breakpoints": Object {
            "desktop": "64em",
            "desktopLarge": "97.6em",
            "mobile": "13.6em",
            "mobileWide": "30.4em",
            "tablet": "47.2em",
          },
          "color": Object {
            "apple": "#BD2527",
            "carrot": "#f56500",
            "cement": "#7D7D7D",
            "charcoal": "#333333",
            "dawn": "#F16975",
            "dew": "#85CBA8",
            "dusk": "#4D4D4F",
            "grass": "#9BCA3E",
            "hail": "#BCBEC0",
            "lightning": "#FFDB6F",
            "marine": "#2F7BBF",
            "moonshine": "#F7F7F7",
            "night": "#404041",
            "rain": "#408BC9",
            "sky": "#76C4E2",
            "smoke": "#e0e0e0",
            "storm": "#808285",
            "sunrise": "#F69259",
            "sunset": "#BA77B1",
            "tangerine": "#FF7900",
            "twilight": "#8176B5",
          },
          "colorBlack": "#000",
          "colorBlue": "#2f7bbf",
          "colorBlueDark": "#2869a2",
          "colorBlueLight": "#62a1d8",
          "colorError": "#ff3100",
          "colorFacebookBlue": "#3b5998",
          "colorGray": "#7c7c7c",
          "colorGrayBorder": "#666",
          "colorGrayDark": "#333",
          "colorGrayLight": "#dedede",
          "colorGrayLightOnboarding": "#F7F7F7",
          "colorGreen": "#9bca3e",
          "colorGreenDark": "#87b331",
          "colorGreenLight": "#bada7a",
          "colorImportantInformation": "rgba(64,139,201,0.2)",
          "colorInfo": "#00a9eb",
          "colorMainBackground": "#e6e6e6",
          "colorMuted": "#7c7c7c",
          "colorOffsetDark": 0.07,
          "colorOffsetLight": 0.15,
          "colorOrange": "#ff7900",
          "colorOrangeDark": "#db6800",
          "colorOrangeLight": "#ffa14d",
          "colorOverlay": "rgba(0, 0, 0, .7)",
          "colorPink": "#d91698",
          "colorPinkDark": "#b91381",
          "colorPinkLight": "#ed4eb8",
          "colorPurple": "#9545e5",
          "colorPurpleDark": "#b91381",
          "colorPurpleLight": "#ed4eb8",
          "colorRed": "#bd2527",
          "colorRedDark": "#9f1f21",
          "colorRedLight": "#dd5153",
          "colorSmoke": "#f2f2f2",
          "colorSuccess": "#68970f",
          "colorTwitterBlue": "#00aced",
          "colorWarning": "#fca520",
          "colorWhite": "#fff",
          "colorYellow": "#ffd24d",
          "colorYellowDark": "#ffc929",
          "colorYellowLight": "#ffe59a",
          "disabledBackground": "#ededed",
          "em": "1em",
          "fontColor": "#333",
          "fontColorHeadingCaption": "#888",
          "fontFamily": "\\"Open Sans\\", Helvetica, Arial, sans-serif",
          "fontSize": "15px",
          "fontWeight": 400,
          "fontWeightLight": 300,
          "gradient": Object {
            "eight": "linear-gradient(left, #85CBA8, #FFDB6F)",
            "five": "linear-gradient(left, #8176B5, #F16975)",
            "four": "linear-gradient(left, #8176B5, #BA77B1)",
            "primary": "linear-gradient(left, #76C4E2, #85CBA8)",
            "seven": "linear-gradient(left, #F69259, #FFDB6F)",
            "six": "linear-gradient(left, #F16975, #F69259)",
            "three": "linear-gradient(left, #8176B5, #76C4E2)",
            "two": "linear-gradient(left, #8176B5, #85CBA8)",
          },
          "inputFontSize": "13px",
          "inputLineHeight": 1.4,
          "lineHeight": 1.5,
          "rem": "1rem",
          "weightBold": 700,
          "weightLight": 300,
          "weightNormal": 400,
          "weightSemiBold": 600,
          "zIndexMax": 1000,
        }
      }
    >
      <table>
        <ThemedComponent>
          <FelaComponent>
            <TableHead
              className="d1fi02"
              is="thead"
            >
              <thead
                className="d1fi02"
              />
            </TableHead>
          </FelaComponent>
        </ThemedComponent>
        <ThemedComponent>
          <FelaComponent>
            <TableBody
              className="zos2pn"
              is="tbody"
            >
              <tbody
                className="zos2pn"
              />
            </TableBody>
          </FelaComponent>
        </ThemedComponent>
        <ThemedComponent>
          <FelaComponent>
            <TableFoot
              className="dotb8y"
              is="tfoot"
            >
              <tfoot
                className="dotb8y"
              />
            </TableFoot>
          </FelaComponent>
        </ThemedComponent>
      </table>
    </ThemeProvider>
  </Provider>
</StyleProvider>
`;
